<resources>

    <!--    common-->
    <string name="app_name">donatemate</string>
    <string name="type_your_email">Type your Email</string>
    <string name="type_your_password">Type Your Password</string>

    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="moto">Let\'s help each other..</string>
    <string name="sign_up">Sign Up</string>


    <string name="fname">First Name</string>
    <string name="enterfname">Enter Full Name</string>
    <string name="entermobile">Enter Mobile Number</string>
    <string name="exName">Full Name</string>
    <string name="exemail">exampleuseremail.com</string>

    <!-- bottum nav bar-->
    <string name="payment">Payment</string>
    <string name="setting">Setting</string>
    <string name="notification">Notification</string>
    <string name="password">Password:</string>
    <string name="dashboard">Dashboard</string>
    <string name="loading">Loading...</string>
    <string name="entercity">Enter your city</string>
    <string name="entercountry">Enter your country</string>

    <string name="feedAvailable">Available Medicines</string>
    <string name="feedContact_btn">Contact</string>
    <string name="feedMedicine_name_1">Acetazolamide Tablets</string>

    <string name="feedMedicine_weight_1">100 mg</string>
    <string name="feedMedicine_poster_1">A. B. C. Perera</string>
    <string name="feedMedicine_location_1">Toronto, Canada</string>
    <string name="feedMedicine_qty_1">2 Packs</string>
    <string name="feedMedicine_name_2">Amoxicillin Tablets</string>
    <string name="feedMedicine_weight_2">250 mg</string>
    <string name="feedMedicine_qty_2">3 Packs</string>
    <string name="feedMedicine_poster_2">Mahesh Silva</string>
    <string name="feedMedicine_location_2">London, UK</string>
    <string name="feedMedicine_name_3">Isoniazid Syrup</string>
    <string name="feedMedicine_weight_3">300 ml</string>
    <string name="feedMedicine_qty_3">3 bottles</string>
    <string name="feedMedicine_poster_3">Ihani Saumya</string>
    <string name="feedMedicine_location_3">Sydney, Australia</string>
    <string name="title_add_availableMedicine_1">Add Available</string>
    <string name="title_add_availableMedicine_2">Medicines</string>
    <string name="title_edit_availableMedicine_1">Edit Available</string>
    <string name="moto_addAvailable">Let\'s help each other.....</string>

    <string name="profile">Profile</string>

    <!-- placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="medicine">Medicine</string>
    <string name="favorite">Favorites</string>
    <string name="need_medicine">Need medicines</string>
    <string name="pharmacy">Pharmacies</string>
    <string name="history">My History</string>
    <string name="home">Home</string>
    <string name="availablemedicine">Available Medicines</string>
    <string name="editprofile">Edit Profile</string>
    <string name="submit">Submit</string>
    <string name="deleteprofile">Delete Profile</string>
    <string name="avFeed_enter_medicineName">Enter Medicine Name</string>
    <string name="avFeed_enter_medicineQty">Enter Quantity you have</string>
    <string name="avFeed_enter_medicineWeight">Enter Medicine Weight</string>
    <string name="avFeed_enter_medicineDescription">Enter Medicine Description</string>
    <string name="addAvailable_btn_submit">SUBMIT</string>
    <string name="addAvailable_btn_cancel">CANCEL</string>
    <string name="addAvailable_btn_save">SAVE</string>
    <string name="tagline_editAvailable">Edit your entered details</string>
    <string name="title_userActivity">My Activity</string>
    <string name="myActivity_userName">Eehanee Saumya</string>
    <string name="myActivity_userLocation">Sydney, Australia</string>
    <string name="myActivity_userEmail">abc@gmail.com</string>
    <string name="avSummary_title_history">Summary</string>
    <string name="avSummary_title_main">Available Medicine</string>
    <string name="summary_btn_edit">Edit</string>
    <string name="summary_btn_delete">Delete</string>
    <string name="pharmacyName">Pharmacy</string>


    <!--    payment-->
    <string name="string_addpayment">Add Payment</string>
    <string name="Read_payment">Read payment</string>
    <string name="Editpayment">Edit payment</string>
    <string name="ecarddetails">Enter card Detals</string>
    <string name="selectpmethord">Select Payment method</string>
    <string name="cardnumber">Card Number</string>
    <string name="entercardnumber">Enter your card number</string>
    <string name="nameoncard">Name On Card</string>
    <string name="entercname">Enter your name on card</string>
    <string name="edate">Expiry Date</string>
    <string name="mmyy">MM/YY</string>
    <string name="ccvcode">CVC Code</string>
    <string name="cvc">CVC</string>
    <string name="visacard">Visa</string>
    <string name="masetrcard">Master</string>
    <string name="termscondi">I agree to Terms and Conditions</string>
    <string name="paynow">Pay Now</string>
    <string name="EnterCardLbl">Enter Card Details</string>
    <string name="paymentLbl">Please select payment method</string>
    <string name="CardNoLbl">Card Number</string>
    <string name="nameLbl">Name on Card</string>
    <string name="cardNo">1234567891234567</string>
    <string name="nameCard">Enter your name on card</string>
    <string name="exDateLbl">Expiry Date</string>
    <string name="exDateHint">MM / YY</string>
    <string name="CVCno">CVC</string>
    <string name="cvcLbl">CVC Code</string>
    <string name="rb1">I agree to Terms and Conditions</string>
    <string name="payButton">Pay Now</string>
    <string name="cardDetailsLbl">Your Card Details</string>
    <string name="cardnlabel">Card Number</string>
    <string name="chNamelbl">Card Holder\'s Name</string>
    <string name="expDateLabel">Expiry Date</string>
    <string name="cvcLabel">CVC Code</string>
    <string name="cancelButton">Cancel Order</string>
    <string name="buttonContinue">Continue</string>
    <string name="retrieveCardNoLbl"> </string>
    <string name="retrieveCardHname"> </string>
    <string name="exDateRead"> </string>
    <string name="CVCNoRead"> </string>
    <string name="successmsg">Payment Successful!</string>
    <string name="congratzlbl">Congratulation!</string>
    <string name="conflbl">Your Order is Confirmed.</string>
    <string name="emailsentLbl">Email has been sent with details.</string>
    <string name="homeBtn">Back to Home</string>
    <string name="viewBtn">View Order</string>
    <string name="cardNoHint">Enter your card number</string>
    <string name="updateBtn">UPDATE</string>
    <string name="bdeatils">Booking Details</string>
    <string name="btnContinue">Continue</string>
    <string name="bookingDetails">Your order is Confirmed</string>
    <string name="pickup_details">We will pick up you on :</string>
    <string name="datenTime">30 October 2022 at 10.00 AM</string>
    <string name="location">Colombo, Sri Lanka</string>
    <string name="vehicleName">Audi A6 2017</string>
    <string name="lblLocation">Colombo, Sri Lanka</string>
    <string name="lblPrice">Rs.18,000</string>
    <string name="lblPerDay">Per Day</string>
    <string name="reservation">Reservation</string>
    <string name="noOfBookingDays">Number of Booking Days</string>
    <string name="lblDays">2</string>
    <string name="pickupDate">Pick-up Date</string>
    <string name="dropOffLbl">Drop-off Date</string>
    <string name="timeLbl">Booking Time</string>
    <string name="DiscountLbl">Discount</string>
    <string name="totAmount">Total Amount</string>
    <string name="btnBooking">Place Order</string>
    <string name="pickUpDate">Sun, 30 October</string>
    <string name="dropOfDate">Tue, 01 November</string>
    <string name="timeBooking">10.00 AM</string>
    <string name="lblDis">-</string>
    <string name="TotalLbl">Rs.36,000</string>
    <string name="deletecard">Delete Card</string>
    <string name="editcarddetails">Edit Card Details</string>
    <string name="title">DonateMate</string>
    <string name="askDonation">Ask Donation</string>
    <string name="Donation">Donation</string>
    <string name="memori">Memoriam</string>
    <string name="Adddonatin">Add Donation</string>
    <string name="donanam">Donation Name</string>
    <string name="readDonation">Read Donation</string>
    <string name="dname" />
    <string name="rdname">Name</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="qty">Quantity</string>
    <string name="decs">Description</string>
    <string name="Editdonatin">Edit Donation</string>
</resources>