<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="18dp"
    tools:context=".HomePage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/title"
            android:textAlignment="center"
            android:textColor="@color/bottum_nav_item"
            android:textSize="34sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp">

            <LinearLayout
                android:id="@+id/askdonat"
                android:layout_width="150dp"
                android:layout_height="189dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/grey_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="261dp"
                    android:layout_weight="1"
                    android:minHeight="100dp"
                    android:padding="10dp"
                    app:srcCompat="@drawable/baseline_handshake_24" />

                <TextView
                    android:id="@+id/askdonation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/askDonation"
                    android:textAlignment="center"
                    android:textColor="@color/bottum_nav_item"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/payment"
                android:layout_width="150dp"
                android:layout_height="189dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/grey_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="261dp"
                    android:layout_weight="1"
                    android:minHeight="100dp"
                    android:padding="10dp"
                    app:srcCompat="@drawable/baseline_groups_2_24" />

                <TextView
                    android:id="@+id/donation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/payment"
                    android:textAlignment="center"
                    android:textColor="@color/bottum_nav_item"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp">

            <LinearLayout
                android:id="@+id/memoria"
                android:layout_width="150dp"
                android:layout_height="189dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/grey_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="242dp"
                    android:layout_weight="1"
                    android:minHeight="100dp"
                    android:padding="10dp"
                    app:srcCompat="@drawable/baseline_favorite_24" />

                <TextView
                    android:id="@+id/memoriam"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/memori"
                    android:textAlignment="center"
                    android:textColor="@color/bottum_nav_item"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profil"
                android:layout_width="150dp"
                android:layout_height="189dp"
                android:background="@drawable/grey_background"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="249dp"
                    android:layout_weight="1"
                    android:minHeight="100dp"
                    android:padding="10dp"
                    app:srcCompat="@drawable/baseline_person_24" />

                <TextView
                    android:id="@+id/Profile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:padding="20dp"
                    android:text="@string/profile"
                    android:textAlignment="center"
                    android:textColor="@color/bottum_nav_item"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>


    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/BottumNavigationView"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/nav_bg"
        app:elevation="8dp"
        app:itemIconTint="@drawable/bottom_nav_colors"
        app:itemTextColor="@drawable/bottom_nav_colors"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"

        app:menu="@menu/bottum_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>